// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsFeed test after load 1`] = `
"<Fragment>
  <div className=\\"newsfeed\\">
    <Row>
      <Column width={3}>
        <NewsCard id={[undefined]} title={[undefined]} url={[undefined]} />
      </Column>
    </Row>
  </div>
</Fragment>"
`;

exports[`NewsFeed test initially 1`] = `
"<Fragment>
  <div className=\\"newsfeed\\">
    <Row />
  </div>
</Fragment>"
`;
